samples/_failures_safe/1761641680_a8620e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c785eabe.c: In function ‘main’:
./samples/SAFE/__tmp_c785eabe.c:154:14: error: expected ‘)’ at end of input
  154 |     if (fgets
      |        ~     ^
      |              )
./samples/SAFE/__tmp_c785eabe.c:154:5: error: expected declaration or statement at end of input
  154 |     if (fgets
      |     ^~
